--- a/_layouts/posts-paginated.html
+++ b/_layouts/posts-paginated.html
@@ -4,9 +4,11 @@
 {% for post in posts %}
 
     {% if path == '/newsroom/' and post.custom_fields.display_in_newsroom %}
-        {% set permalink = '/blog/' + post.slug + '/' %}
-    {% else %}
-        {% set permalink = post.permalink %}
+        {% set category = 'Blog' %}
+        {% set category_filter_url = '?filter_type=post' %}
+    {% elif post.category.0 %}
+        {% set category = post.category.0 %}
+        {% set category_filter_url = '?filter_category=' + category|urlencode|replace('%20', '+') %}
     {% endif %}
 
     <article class="post-preview">
@@ -14,19 +16,18 @@
             <span class="date meta-header_right">
                 {{ post.date|date("%b %d, %Y") }}
             </span>
-        {% if post.category.0 %}
-            <a class="category-slug meta-header_left"
-               href="?filter_category={{ post.category.0|urlencode|replace('%20', '+') }}">
-                {{ post_macros.category_icon(post.category.0, 'category-slug_icon')|safe }}
+        {% if category %}
+            <a class="category-slug meta-header_left" href="{{ category_filter_url }}">
+                {{ post_macros.category_icon(category, 'category-slug_icon')|safe }}
                 <span class="u-visually-hidden">Category:</span>
-                {{ post.category.0 }}
+                {{ category }}
             </a>
         {% else %}
             &nbsp;
         {% endif %}
         </div>
     {% if post.thumbnail.images and post.thumbnail.images.fj_thumbnail %}
-        <a class="media-object" href="{{ permalink }}">
+        <a class="media-object" href="{{ post.permalink }}">
             <div class="media-object_image-container">
                 <img class="media-object_image"
                      src="{{ post.thumbnail.images.fj_thumbnail.url }}"
@@ -37,7 +38,7 @@
             </div>
         </a>
     {% else %}
-        <a class="summary" href="{{ permalink }}">
+        <a class="summary" href="{{ post.permalink }}">
             {{ post_macros.post_summary(post) }}
         </a>
     {% endif %}
