--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -13644,6 +13644,149 @@ a.category-slug.active {
 }
 
 /* topdoc
+  name: Input with button
+  family: cfgov-misc
+  patterns:
+    - name: Default pattern
+      markup: |
+        <div class="input-with-btn">
+            <div class="input-with-btn_input">
+                <input class="" type="text">
+            </div>
+            <div class="input-with-btn_btn">
+                <button class="btn">Search</button>
+            </div>
+        </div>
+  tags:
+    - cfgov-misc
+*/
+
+.input-with-btn input,
+.input-with-btn .btn {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.input-with-btn .btn__super {
+  padding-left: 0.83333333em;
+  padding-right: 0.83333333em;
+}
+
+.input-with-btn {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.input-with-btn {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.input-with-btn_input {
+  margin-bottom: 0.9375em;
+}
+
+.input-with-btn_input {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 66.66666667%;
+  border-right-width: 0;
+}
+
+.ie .input-with-btn_input {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_input {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_input {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 66.66666667%;
+  border-right-width: 0;
+}
+
+.ie .input-with-btn_input {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_input {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_btn {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 33.33333333%;
+}
+
+.ie .input-with-btn_btn {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_btn {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_btn {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 33.33333333%;
+}
+
+.ie .input-with-btn_btn {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_btn {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+/* topdoc
   name: Form actions
   family: cfgov-misc
   patterns:
