--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -13647,32 +13647,29 @@ a.category-slug.active {
   name: Input with button
   family: cfgov-misc
   patterns:
-    - name: Default pattern
+    - name: Default input and button
       markup: |
         <div class="input-with-btn">
             <div class="input-with-btn_input">
-                <input class="" type="text">
+                <input type="text">
             </div>
             <div class="input-with-btn_btn">
                 <button class="btn">Search</button>
             </div>
         </div>
+    - name: Super input and button
+      markup: |
+        <div class="input-with-btn">
+            <div class="input-with-btn_input">
+                <input class="input__super" type="text">
+            </div>
+            <div class="input-with-btn_btn">
+                <button class="btn btn__super">Search</button>
+            </div>
+        </div>
   tags:
     - cfgov-misc
 */
-
-.input-with-btn input,
-.input-with-btn .btn {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.input-with-btn .btn__super {
-  padding-left: 0.83333333em;
-  padding-right: 0.83333333em;
-}
 
 .input-with-btn {
   display: block;
@@ -13701,7 +13698,7 @@ a.category-slug.active {
   border-width: 0 15px;
   margin-right: -0.25em;
   vertical-align: top;
-  width: 66.66666667%;
+  width: 75%;
   border-right-width: 0;
 }
 
@@ -13725,7 +13722,7 @@ a.category-slug.active {
   border-width: 0 15px;
   margin-right: -0.25em;
   vertical-align: top;
-  width: 66.66666667%;
+  width: 75%;
   border-right-width: 0;
 }
 
@@ -13740,6 +13737,61 @@ a.category-slug.active {
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
+.input-with-btn_input {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 83.33333333%;
+  border-right-width: 0;
+}
+
+.ie .input-with-btn_input {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_input {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_input {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 83.33333333%;
+  border-right-width: 0;
+}
+
+.ie .input-with-btn_input {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_input {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_input input {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+}
+
 .input-with-btn_btn {
   display: inline-block;
   -webkit-box-sizing: border-box;
@@ -13749,7 +13801,7 @@ a.category-slug.active {
   border-width: 0 15px;
   margin-right: -0.25em;
   vertical-align: top;
-  width: 33.33333333%;
+  width: 25%;
 }
 
 .ie .input-with-btn_btn {
@@ -13772,7 +13824,7 @@ a.category-slug.active {
   border-width: 0 15px;
   margin-right: -0.25em;
   vertical-align: top;
-  width: 33.33333333%;
+  width: 25%;
 }
 
 .ie .input-with-btn_btn {
@@ -13784,6 +13836,120 @@ a.category-slug.active {
   margin-right: 0;
   zoom: 1;
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_btn {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 16.66666667%;
+}
+
+.ie .input-with-btn_btn {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_btn {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_btn {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 16.66666667%;
+}
+
+.ie .input-with-btn_btn {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .input-with-btn_btn {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.input-with-btn_btn .btn {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.input-with-btn_btn .btn__super {
+  padding-left: 0.83333333em;
+  padding-right: 0.83333333em;
+}
+
+/* topdoc
+  name: Button inside input
+  family: cfgov-misc
+  patterns:
+    - name: Default button inside of an default input
+      markup: |
+        <div class="btn-inside-input">
+            <input type="text"
+                   value="This is some really long text to make sure that the button doesn't overlap the content in such a way that this input becomes unusable.">
+            <button class="btn btn__link btn__secondary">
+                Clear
+                <span class="cf-icon cf-icon-delete"></span>
+            </button>
+        </div>
+    - name: Super button inside of a super input
+      markup: |
+        <div class="btn-inside-input">
+            <input class="input__super"
+                   type="text"
+                   value="This is some really long text to make sure that the button doesn't overlap the content in such a way that this input becomes unusable.">
+            <button class="btn btn__super btn__link btn__secondary">
+                Clear
+                <span class="cf-icon cf-icon-delete"></span>
+            </button>
+        </div>
+  tags:
+    - cfgov-misc
+*/
+
+.btn-inside-input {
+  position: relative;
+}
+
+.btn-inside-input input {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  padding-right: 4.64285714em;
+}
+
+.btn-inside-input .input__super {
+  padding-right: 5em;
+}
+
+.btn-inside-input .btn {
+  border-bottom-width: 0 !important;
+  position: absolute;
+  right: 1.07142857em;
+  top: 0;
+}
+
+.btn-inside-input .btn__super {
+  right: 0.83333333em;
 }
 
 /* topdoc
