--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -600,14 +600,24 @@
   name: Input with button
   family: cfgov-misc
   patterns:
-    - name: Default pattern
+    - name: Default input and button
       markup: |
         <div class="input-with-btn">
             <div class="input-with-btn_input">
-                <input class="" type="text">
+                <input type="text">
             </div>
             <div class="input-with-btn_btn">
                 <button class="btn">Search</button>
+            </div>
+        </div>
+    - name: Super input and button
+      markup: |
+        <div class="input-with-btn">
+            <div class="input-with-btn_input">
+                <input class="input__super" type="text">
+            </div>
+            <div class="input-with-btn_btn">
+                <button class="btn btn__super">Search</button>
             </div>
         </div>
   tags:
@@ -616,34 +626,100 @@
 
 .input-with-btn {
 
-    input,
-    .btn {
-        box-sizing: border-box;
-        width: 100%;
-    }
-    
-    .btn__super {
-        padding-left: unit(15px / @super-btn-font-size, em);
-        padding-right: unit(15px / @super-btn-font-size, em);
-    }
-    
-    .respond-to-min(420px, {
+    .respond-to-min(480px, {
         .grid_nested-col-group();
     });
 
     &_input {
         margin-bottom: unit(15px / @base-font-size-px, em);
-        
-        .respond-to-min(420px, {
-            .grid_column(8);
+        .respond-to-min(480px, {
+            .grid_column(9);
             border-right-width: 0;
         });
+        .respond-to-min(960px, {
+            .grid_column(10);
+            border-right-width: 0;
+        });
+
+        input {
+            box-sizing: border-box;
+            width: 100%;
+        }
     }
 
     &_btn {
-        .respond-to-min(420px, {
-            .grid_column(4);
+        .respond-to-min(480px, {
+            .grid_column(3);
         });
+        .respond-to-min(960px, {
+            .grid_column(2);
+        });
+
+        .btn {
+            box-sizing: border-box;
+            width: 100%;
+        }
+        
+        .btn__super {
+            padding-left: unit(15px / @super-btn-font-size, em);
+            padding-right: unit(15px / @super-btn-font-size, em);
+        }
+    }
+
+}
+
+
+/* topdoc
+  name: Button inside input
+  family: cfgov-misc
+  patterns:
+    - name: Default button inside of an default input
+      markup: |
+        <div class="btn-inside-input">
+            <input type="text"
+                   value="This is some really long text to make sure that the button doesn't overlap the content in such a way that this input becomes unusable.">
+            <button class="btn btn__link btn__secondary">
+                Clear
+                <span class="cf-icon cf-icon-delete"></span>
+            </button>
+        </div>
+    - name: Super button inside of a super input
+      markup: |
+        <div class="btn-inside-input">
+            <input class="input__super"
+                   type="text"
+                   value="This is some really long text to make sure that the button doesn't overlap the content in such a way that this input becomes unusable.">
+            <button class="btn btn__super btn__link btn__secondary">
+                Clear
+                <span class="cf-icon cf-icon-delete"></span>
+            </button>
+        </div>
+  tags:
+    - cfgov-misc
+*/
+
+.btn-inside-input {
+
+    position: relative;
+    
+    input {
+        box-sizing: border-box;
+        width: 100%;
+        padding-right: unit(65px / @btn-font-size, em);
+    }
+    .input__super {
+        padding-right: unit(90px / @super-btn-font-size, em);
+    }
+    
+    .btn {
+        .u-link__no-border();
+        position: absolute;
+        right: unit(15px / @btn-font-size, em);
+        top: 0;
+        
+        &__super {
+            right: unit(15px / @super-btn-font-size, em);
+        }
     }
 
 }
