--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -19622,6 +19622,38 @@ a.focus .summary_header {
    Contact us
    ========================================================================== */
 
+#contact-list {
+  display: none;
+}
+
+#contact-list {
+  display: block;
+}
+
+#contact-list {
+  display: block;
+}
+
+.no-js #contact-list {
+  display: block;
+}
+
+#contact-list_btn {
+  width: 100%;
+}
+
+#contact-list_btn {
+  display: none;
+}
+
+#contact-list_btn {
+  display: none;
+}
+
 .contact-us-map {
   max-width: 330px;
+}
+
+.helpful-terms h5 {
+  display: inline;
 }
