--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -648,6 +648,8 @@
     }
 
     &_btn {
+        margin-bottom: unit(15px / @base-font-size-px, em);
+
         .respond-to-min(480px, {
             .grid_column(3);
         });
