--- a/static/css/contact-us.less
+++ b/static/css/contact-us.less
@@ -10,12 +10,19 @@
 }
 
 .type-and-filter_message {
+    display: none;
     .h3();
-    // 47px = 60px when facotring margins and line-height from elements above it.
+    // 16px = 30px when facotring margins and line-height from elements above it.
     // 26px = 30px when facotring line-height.
-    margin: unit(47px / @font-size, em)
+    margin: unit(16px / @font-size, em)
             0
             unit(26px / @font-size, em);
+
+    .respond-to-min(801px, {
+        display: block;
+        // 47px = 60px when facotring margins and line-height from elements above it.
+        margin-top: unit(47px / @font-size, em);
+    });
 }
 
 .contact-list {
@@ -31,6 +38,7 @@
 
 .contact-list_btn {
     width: 100%;
+    margin: unit(30px / @super-btn-font-size, em) 0;
     .respond-to-min(801px, {
         display: none;
     });
