Add Logo to header

--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -65,6 +65,61 @@
 </code></pre>
       </div>
     </div>
+    <div id="header" class="docs-component">
+      <h2 class="docs-component_header"><span>Header</span></h2>
+      <div class="docs-patterns">
+        <div class="docs-pattern">
+          <h3 class="docs-pattern_header">Logo</h3>
+          <section class="docs-pattern_pattern">
+<a href="/">
+    <img class="logo logo__js"
+         src="/static/img/logo.svg"
+         onerror="this.src='/static/img/logo.png';"
+         alt="Consumer Financial Protection Bureau"
+         width="262"
+         height="66">
+    <noscript>
+        <img class="logo logo__no-js"
+             src="/static/img/logo.png"
+             alt="Consumer Financial Protection Bureau"
+             width="262"
+             height="66">
+    </noscript>
+</a>
+
+          </section>
+          <footer class="docs-pattern_footer">
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;a href=&quot;/&quot;&gt;
+    &lt;img class=&quot;logo logo__js&quot;
+         src=&quot;/static/img/logo.svg&quot;
+         onerror=&quot;this.src='/static/img/logo.png';&quot;
+         alt=&quot;Consumer Financial Protection Bureau&quot;
+         width=&quot;262&quot;
+         height=&quot;66&quot;&gt;
+    &lt;noscript&gt;
+        &lt;img class=&quot;logo logo__no-js&quot;
+             src=&quot;/static/img/logo.png&quot;
+             alt=&quot;Consumer Financial Protection Bureau&quot;
+             width=&quot;262&quot;
+             height=&quot;66&quot;&gt;
+    &lt;/noscript&gt;
+&lt;/a&gt;</code></pre>
+            <ul class="docs-notes">
+              <li>CSS provides margin around the logo.</li>
+              <li>Markup allows for the usage of an SVG logo for browsers that support SVG, with a fallback to PNG for browsers that don't.</li>
+            </ul>
+          </footer>
+        </div>
+      </div>
+      <div class="docs-css">
+        <pre class="docs-code"><code data-language="css">
+.logo {
+  display: block;
+  margin: 0.9375em;
+}
+</code></pre>
+      </div>
+    </div>
     <div id="content-layouts" class="docs-component">
       <h2 class="docs-component_header"><span>Content layouts</span></h2>
       <div class="docs-patterns">
