--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,5 +1,19 @@
     <header class="header" role="banner">
         <div class="wrapper">
-            <div class="demo-placeholder">header placeholder</div>
+            <a href="/">
+                <img class="logo logo__js"
+                     src="/static/img/logo.svg"
+                     onerror="this.src='/static/img/logo.png';"
+                     alt="Consumer Financial Protection Bureau"
+                     width="262"
+                     height="66">
+                <noscript>
+                    <img class="logo logo__no-js"
+                         src="/static/img/logo.png"
+                         alt="Consumer Financial Protection Bureau"
+                         width="262"
+                         height="66">
+                </noscript>
+            </a>
         </div>
     </header><!-- END .header -->
