--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9569,6 +9569,40 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 
 /* topdoc
+  name: Header
+  family: cfgov-layout
+  patterns:
+    - name: Logo
+      markup: |
+        <a href="/">
+            <img class="logo logo__js"
+                 src="/static/img/logo.svg"
+                 onerror="this.src='/static/img/logo.png';"
+                 alt="Consumer Financial Protection Bureau"
+                 width="262"
+                 height="66">
+            <noscript>
+                <img class="logo logo__no-js"
+                     src="/static/img/logo.png"
+                     alt="Consumer Financial Protection Bureau"
+                     width="262"
+                     height="66">
+            </noscript>
+        </a>
+      notes:
+        - "CSS provides margin around the logo."
+        - "Markup allows for the usage of an SVG logo for browsers that support
+           SVG, with a fallback to PNG for browsers that don't."
+  tags:
+    - cfgov-layout
+*/
+
+.logo {
+  display: block;
+  margin: 0.9375em;
+}
+
+/* topdoc
   name: Content layouts
   family: cfgov-layout
   patterns:
