Fix logo path in docs

--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -73,14 +73,14 @@
           <section class="docs-pattern_pattern">
 <a href="/">
     <img class="logo logo__js"
-         src="/static/img/logo.svg"
+         src="../static/img/logo.svg"
          onerror="this.src='/static/img/logo.png';"
          alt="Consumer Financial Protection Bureau"
          width="262"
          height="66">
     <noscript>
         <img class="logo logo__no-js"
-             src="/static/img/logo.png"
+             src="../static/img/logo.png"
              alt="Consumer Financial Protection Bureau"
              width="262"
              height="66">
@@ -91,14 +91,14 @@
           <footer class="docs-pattern_footer">
             <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;a href=&quot;/&quot;&gt;
     &lt;img class=&quot;logo logo__js&quot;
-         src=&quot;/static/img/logo.svg&quot;
+         src=&quot;../static/img/logo.svg&quot;
          onerror=&quot;this.src='/static/img/logo.png';&quot;
          alt=&quot;Consumer Financial Protection Bureau&quot;
          width=&quot;262&quot;
          height=&quot;66&quot;&gt;
     &lt;noscript&gt;
         &lt;img class=&quot;logo logo__no-js&quot;
-             src=&quot;/static/img/logo.png&quot;
+             src=&quot;../static/img/logo.png&quot;
              alt=&quot;Consumer Financial Protection Bureau&quot;
              width=&quot;262&quot;
              height=&quot;66&quot;&gt;
@@ -107,6 +107,7 @@
             <ul class="docs-notes">
               <li>CSS provides margin around the logo.</li>
               <li>Markup allows for the usage of an SVG logo for browsers that support SVG, with a fallback to PNG for browsers that don't.</li>
+              <li>The path in the `src` attribute has been adjusted for these docs.</li>
             </ul>
           </footer>
         </div>
