--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -45,14 +45,14 @@
       markup: |
         <a href="/">
             <img class="logo logo__js"
-                 src="/static/img/logo.svg"
+                 src="../static/img/logo.svg"
                  onerror="this.src='/static/img/logo.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="262"
                  height="66">
             <noscript>
                 <img class="logo logo__no-js"
-                     src="/static/img/logo.png"
+                     src="../static/img/logo.png"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
                      height="66">
@@ -62,6 +62,7 @@
         - "CSS provides margin around the logo."
         - "Markup allows for the usage of an SVG logo for browsers that support
            SVG, with a fallback to PNG for browsers that don't."
+        - "The path in the `src` attribute has been adjusted for these docs."
   tags:
     - cfgov-layout
 */
