Fix logo path in docs, take 2

--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -45,14 +45,14 @@
       markup: |
         <a href="/">
             <img class="logo logo__js"
-                 src="../static/img/logo.svg"
+                 src="../../static/img/logo.svg"
                  onerror="this.src='/static/img/logo.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="262"
                  height="66">
             <noscript>
                 <img class="logo logo__no-js"
-                     src="../static/img/logo.png"
+                     src="../../static/img/logo.png"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
                      height="66">
