--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9576,14 +9576,14 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
       markup: |
         <a href="/">
             <img class="logo logo__js"
-                 src="../static/img/logo.svg"
+                 src="../../static/img/logo.svg"
                  onerror="this.src='/static/img/logo.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="262"
                  height="66">
             <noscript>
                 <img class="logo logo__no-js"
-                     src="../static/img/logo.png"
+                     src="../../static/img/logo.png"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
                      height="66">
