--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -72,14 +72,14 @@
           <section class="docs-pattern_pattern">
 <a href="/">
     <img class="logo logo__js"
-         src="../static/img/logo.svg"
+         src="../../static/img/logo.svg"
          onerror="this.src='/static/img/logo.png';"
          alt="Consumer Financial Protection Bureau"
          width="262"
          height="66">
     <noscript>
         <img class="logo logo__no-js"
-             src="../static/img/logo.png"
+             src="../../static/img/logo.png"
              alt="Consumer Financial Protection Bureau"
              width="262"
              height="66">
@@ -90,14 +90,14 @@
           <footer class="docs-pattern_footer">
             <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;a href=&quot;/&quot;&gt;
     &lt;img class=&quot;logo logo__js&quot;
-         src=&quot;../static/img/logo.svg&quot;
+         src=&quot;../../static/img/logo.svg&quot;
          onerror=&quot;this.src='/static/img/logo.png';&quot;
          alt=&quot;Consumer Financial Protection Bureau&quot;
          width=&quot;262&quot;
          height=&quot;66&quot;&gt;
     &lt;noscript&gt;
         &lt;img class=&quot;logo logo__no-js&quot;
-             src=&quot;../static/img/logo.png&quot;
+             src=&quot;../../static/img/logo.png&quot;
              alt=&quot;Consumer Financial Protection Bureau&quot;
              width=&quot;262&quot;
              height=&quot;66&quot;&gt;
