Updates notes for input-group.

--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -568,6 +568,10 @@
                 <option value="option4">Option 4</option>
             </select>
         </div>
+      notes:
+        - "BEFORE moving to Capital Framework please review the work done in
+           the Owning a Home project to make sure this pattern will be useful for
+           both projects."
   tags:
     - cfgov-misc
 */
