--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12539,6 +12539,10 @@ a.category-slug.active {
                 <option value="option4">Option 4</option>
             </select>
         </div>
+      notes:
+        - "BEFORE moving to Capital Framework please review the work done in
+           the Owning a Home project to make sure this pattern will be useful for
+           both projects."
   tags:
     - cfgov-misc
 */
