--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -13616,6 +13616,10 @@ a.category-slug.active {
                 <option value="option4">Option 4</option>
             </select>
         </div>
+      notes:
+        - "BEFORE moving to Capital Framework please review the work done in
+           the Owning a Home project to make sure this pattern will be useful for
+           both projects."
   tags:
     - cfgov-misc
 */
